style: add theme variables refactor: add 'Transition' import

--- a/_posts/2024-12-12-windows-ipc-in-depth-2.html
+++ b/_posts/2024-12-12-windows-ipc-in-depth-2.html
@@ -6,7 +6,7 @@ date:       2024-12-12 14:00:00
 author:     "ErPaciocco"
 header-img: "/images/posts/2024-12-12-windows-ipc-in-depth-2/ddebackground.png"
 categories:  Windows
-color: orange
+color: blue
 ---
 
 Here we are back in the second episode of our journey into __Windows IPCs__.
