--- a/_posts/2025-01-06-windows-ipc-in-depth-3.html
+++ b/_posts/2025-01-06-windows-ipc-in-depth-3.html
@@ -6,7 +6,7 @@ date:       2025-01-06 11:00:00
 author:     "ErPaciocco"
 header-img: "/images/posts/2025-01-06-windows-ipc-in-depth-3/TypeLib.png"
 categories:  Windows
-color: yellow
+color: blue
 ---
 
 Now that we have seen DDE technology, we will have noticed some of its limitations. Let's compare them with the newcomer COM that we will now examine
