--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@ description: "My latest posts"
   <div class="">
     <div class="w-full">
       <div class="mt-16 mb-4 pl-4 text-left">
-        <div class="flex flex-row flex-no-wrap justify-between items-center rubik text-3xl text-[#f0f0f0] font-bold">
+        <div class="flex flex-row flex-no-wrap justify-between items-center rubik text-3xl text-primary-light font-bold">
           <div class="row-span-2 w-auto">
             <h2 class="section-heading select-none">Blog</h2>
           </div>
@@ -17,7 +17,7 @@ description: "My latest posts"
         </div>
       </div>
     </div>
-    <h1 class="text-center text-lg font-light text-[#f0f0f0] author-header select-all">{{ site.author.bio }}</h1>
+    <h1 class="text-center text-lg font-light text-primary-light author-header select-all">{{ site.author.bio }}</h1>
 
     <v-posts></v-posts>
 
