feature: add post comments style: compress images to reduce latency fix: minor fixes

--- a/_posts/2024-12-12-windows-ipc-in-depth-2.html
+++ b/_posts/2024-12-12-windows-ipc-in-depth-2.html
@@ -47,7 +47,7 @@ Very common in any OS is the need to exchange data between different application
 
 ---
 
-> <div style="display: table"><div style="display: table-cell; width: 10%; vertical-align: middle; text-align: center; padding-right: 10px"><i class="fa-solid fa-lightbulb" style="color: #ffd740; font-size: 4em"></i> </div><div style="font-weight: 300; width: 90%; display: table-cell; vertical-align: middle; text-align: left;"><span class="rubik" style="font-weight: 300;">Recall the previous post: through generalization and abstraction it comes naturally to <i>group entities by common characteristics</i>. Hence the need for modularity and reuse in the programming environment.</span></div></div>
+> <div style="display: table"><div style="display: table-cell; width: 10%; vertical-align: middle; text-align: center; padding-right: 10px"><div style="display: table-cell; width: 10%; vertical-align: middle; text-align: center; padding-right: 10px"><div class="w-8 h-8 rounded-full" style="background-color: #ffd740; font-size: 3.5em"></div> </div><div style="font-weight: 300; width: 90%; display: table-cell; vertical-align: middle; text-align: left;"><span class="rubik" style="font-weight: 300;">Recall the previous post: through generalization and abstraction it comes naturally to <i>group entities by common characteristics</i>. Hence the need for modularity and reuse in the programming environment.</span></div></div>
 
 ---
 
