--- a/posts.html
+++ b/posts.html
@@ -1,5 +1,24 @@
 ---
 layout: null
-permalink: /posts.json
+permalink: /posts
+pagination:
+  permalink: ''
+  enabled: true
+  extension: .json
+  indexpage: ':num'
 ---
-{{ site.posts | jsonify }}
+
+{
+  "pages": [{% for post in paginator.posts %}
+    {% if forloop.first != true %},{% endif %}
+    
+      {{ post | jsonify }}
+    {% endfor %}
+  ] 
+  {% if paginator.next_page %}
+  ,"next": "{{ paginator.next_page_path }}"
+  {% endif %}
+  {% if paginator.previous_page %}
+  ,"prev": "{{ paginator.previous_page_path }}"
+  {% endif %}
+}
