--- a/_posts/2024-11-27-windows-ipc-in-depth.html
+++ b/_posts/2024-11-27-windows-ipc-in-depth.html
@@ -25,22 +25,16 @@ If you would then like to find 0day on the Office suite, welcome, know that much
 
 > <div style="display: table"><div style="display: table-cell; width: 10%; vertical-align: middle; text-align: center; padding-right: 10px"><div class="w-8 h-8 rounded-full" style="background-color: #3d5afe; font-size: 3.5em"></div> </div><div style="font-weight: 300; width: 90%; display: table-cell; vertical-align: middle; text-align: left;"><span class="rubik" style="font-weight: 300;">If you would like to accompany me, as if we were on an afternoon stroll, in having a chat and reflections, the introductory part of the course talks more about “philosophy” than “material technical notions.” If you enjoy discussing these theoretical topics as well, by all means read it. Otherwise you are free to skip to the initial technical chapter.</span></div></div>
 
----
-
 # GENERALIZATION AND ABSTRACTION
 ### HISTORY
 
 Ever since Neolithic times, our ancestors have had the need (and thus the desire) to *“not exert too much effort”*. If we think about it, all technological progress starts from the desire to *“economize”* energy, to “create” methods and tools to be more productive with less effort.
-
----
 
 <figure style="text-align: center">
     <img src="{% vite_asset_path images/posts/2024-11-27-windows-ipc-in-depth/agricoltura-neolitico.webp %}"
          alt="Neolithic Agricolture">
     <figcaption>Agriculture and animal husbandry as methods of having ready food and avoiding hunting</figcaption>
 </figure>
-
----
 
 To create any tool, be it a work tool or any other innovation, it is necessary to “schematize” how the world works, through  <span style="color: #00c853">__generalizations__</span> and  <span style="color: #00c853">__abstractions__</span>.
 
@@ -49,15 +43,11 @@ I found on a StackOverflow QA a nice explanation of these two words followed by 
 
 > <div style="display: table"><div style="display: table-cell; width: 10%; vertical-align: middle; text-align: center; padding-right: 10px"><div class="w-8 h-8 rounded-full" style="background-color: #ffd740; font-size: 3.5em"></div>  </div><div style="font-weight: 300; width: 90%; display: table-cell; vertical-align: middle; text-align: left;"><span class="rubik" style="font-weight: 300;">While abstraction reduces complexity by hiding irrelevant detail, generalization reduces complexity by replacing multiple entities which perform similar functions with a single construct.</span></div></div>
 
----
-
 <figure style="text-align: center">
     <img src="{% vite_asset_path images/posts/2024-11-27-windows-ipc-in-depth/abstract-generalize.png %}"
          alt="Abstraction vs Generalization">
     <figcaption>Abstraction means thay only relevant details are taken into consideration - Generalization groups together objects with same characteristics</figcaption>
 </figure>
-
----
 
 Here is the definition according to an italian encyclopedia, *Sapere*:
 
@@ -67,22 +57,16 @@ __ABSTRACTION__: a process by which <span style="color:#ff6d00">the human mind c
 
 Although the definitions and differences of these two terms are discordant, the key word here is "<span style="color: #00c853">__simplification__</span>". In fact, these two mechanisms arrive to focus more and on fewer elements than the actual ones, depending on the purpose to be achieved.
 
----
-
 > <div style="display: table"><div style="display: table-cell; width: 10%; vertical-align: middle; text-align: center; padding-right: 10px"><div class="w-8 h-8 rounded-full" style="background-color: #3d5afe; font-size: 3.5em"></div>  </div><div style="font-weight: 300; width: 90%; display: table-cell; vertical-align: middle; text-align: left;"><span class="rubik" style="font-weight: 300;">Assume that we are in prehistoric times and we have to grind thick grains of any grain. We have long been doing this with our bare hands, and we have realized that this causes us pain and wear and tear. <br>
 At this point then it occurs to us, what can I do to grind these grains quickly? Maybe by not breaking our hands? <br><br>
 GENERALIZATION: having had direct experience grinding grains, we generalized their “average hardness”: if every time I grind the grains, they break with a firm punch, then all the grains I have collected and will try to break will break in this way. <br>
-ASTRACTION: to find a way, we then think that we need “something hard and tough,” so that we can beat the grains and break them without breaking the tool.</span></div></div>
-
----
+ABSTRACTION: to find a way, we then think that we need “something hard and tough,” so that we can beat the grains and break them without breaking the tool.</span></div></div>
 
 At this point, through cognitive processes, comes *insight*, a solution indicated given the initial conditions.
 
 We then used the pillars of our rational thinking, generalization and abstraction, to innovate and economize.
 
 > <div style="display: table"><div style="display: table-cell; width: 10%; vertical-align: middle; text-align: center; padding-right: 10px"><div class="w-8 h-8 rounded-full" style="background-color: #ffd740; font-size: 3.5em"></div>  </div><div style="font-weight: 300; width: 90%; display: table-cell; vertical-align: middle; text-align: left;"><span class="rubik" style="font-weight: 300;">Beware, however, of early recognition of the various logical fallacies and biases arising from the desire to arrive quickly and with less effort at a solution.</span></div></div>
-
----
 
 ### EVOLUTION
 
@@ -104,8 +88,6 @@ In the field of development, many principles have been devised in this primitive
 
 </div>
 
----
-
 Not to mention the emergence of programming paradigms more advanced than procedural programming:
 
 <div style="line-height:1.5; font-size: 16px">
@@ -115,8 +97,6 @@ Not to mention the emergence of programming paradigms more advanced than procedu
 <b>Functional Programming</b> <br>
 
 </div>
-
----
 
 ***But, in all this, where does Windows fit in?*** 🤔
 
@@ -149,7 +129,5 @@ Thus, the difficulties were:
 # TO BE CONTINUED
 
 I know I have bored you with philosophical arguments, however, from the next post I will begin in a technical way to talk about __the most common IPC mechanisms__ and, later, the first solution devised by Microsoft Windows for this problem: <span style="color: #b71c1c">__Dynamic Data Exchange (DDE)__</span>.
-
----
 
 ### STAY TUNED!
