--- a/allposts.html
+++ b/allposts.html
@@ -3,4 +3,10 @@ layout: null
 permalink: /posts.json
 ---
 
-{{ site.posts | jsonify }}
+{
+    "content": [
+        {% for post in site.posts %}
+            {{ post | jsonify }}{% unless forloop.last %},{% endunless %}
+        {% endfor %}
+    ]
+}
